tmp_error2.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:processDebugGoogleServices UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac
C:\Users\kinga\AndroidStudioProjects\finalyearproject\smartconnect\schoolmanagement\schoolmanagement\schoolmanagement\app\src\main\java\com\example\schoolmanagement\teachertab.java:104: error: cannot find symbol
        UIAnimator.animateImageView((View)cardProfile, 600);
                                     ^
  symbol:   class View
  location: class teachertab
C:\Users\kinga\AndroidStudioProjects\finalyearproject\smartconnect\schoolmanagement\schoolmanagement\schoolmanagement\app\src\main\java\com\example\schoolmanagement\teachertab.java:105: error: cannot find symbol
        UIAnimator.animateImageView((View)cardTeachers, 700);
                                     ^
  symbol:   class View
  location: class teachertab
C:\Users\kinga\AndroidStudioProjects\finalyearproject\smartconnect\schoolmanagement\schoolmanagement\schoolmanagement\app\src\main\java\com\example\schoolmanagement\teachertab.java:106: error: cannot find symbol
        UIAnimator.animateImageView((View)cardEcommerce, 800);
                                     ^
  symbol:   class View
  location: class teachertab
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: C:\Users\kinga\AndroidStudioProjects\finalyearproject\smartconnect\schoolmanagement\schoolmanagement\schoolmanagement\app\src\main\java\com\example\schoolmanagement\manageteachers.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
3 errors

> Task :app:compileDebugJavaWithJavac FAILED

[Incubating] Problems report is available at: file:///C:/Users/kinga/AndroidStudioProjects/finalyearproject/smartconnect/schoolmanagement/schoolmanagement/schoolmanagement/build/reports/problems/problems-report.html
FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  Note: C:\Users\kinga\AndroidStudioProjects\finalyearproject\smartconnect\schoolmanagement\schoolmanagement\schoolmanagement\app\src\main\java\com\example\schoolmanagement\manageteachers.java uses unchecked or unsafe operations.
  Note: Recompile with -Xlint:unchecked for details.
  Note: Recompile with -Xlint:deprecation for details.
  Note: Some input files use or override a deprecated API.
  C:\Users\kinga\AndroidStudioProjects\finalyearproject\smartconnect\schoolmanagement\schoolmanagement\schoolmanagement\app\src\main\java\com\example\schoolmanagement\teachertab.java:104: error: cannot find symbol
          UIAnimator.animateImageView((View)cardProfile, 600);
                                       ^
    symbol:   class View
    location: class teachertab
  C:\Users\kinga\AndroidStudioProjects\finalyearproject\smartconnect\schoolmanagement\schoolmanagement\schoolmanagement\app\src\main\java\com\example\schoolmanagement\teachertab.java:105: error: cannot find symbol
          UIAnimator.animateImageView((View)cardTeachers, 700);
                                       ^
    symbol:   class View
    location: class teachertab
  C:\Users\kinga\AndroidStudioProjects\finalyearproject\smartconnect\schoolmanagement\schoolmanagement\schoolmanagement\app\src\main\java\com\example\schoolmanagement\teachertab.java:106: error: cannot find symbol
          UIAnimator.animateImageView((View)cardEcommerce, 800);
                                       ^
    symbol:   class View
    location: class teachertab
  3 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 7s
16 actionable tasks: 1 executed, 15 up-to-date
